# conan-exiles-server-manager

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  biome.json  commitlint.config.js  lefthook.yml  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.base.json
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: beta.yml  ci.yml  commitlint.yml  labels-sync.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  index.css  main.tsx  providers.tsx  test-setup.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  secrets.rs
apps/desktop/src-tauri/src/commands/: mod.rs  players.rs  server_overview.rs  servers.rs  settings.rs
apps/desktop/src-tauri/src/persistence/: connection.rs  migrations.rs  mod.rs  servers.rs  settings.rs
apps/desktop/src-tauri/src/persistence/migrations/: 0001_init.sql
apps/desktop/src/components/: ban-player-dialog.tsx  bans-table.tsx  broadcast-composer.tsx  console-view.tsx  delete-server-dialog.tsx  kick-player-dialog.tsx  player-table.tsx  players-section.tsx  server-form-dialog.tsx  server-form.tsx  server-hero-stats.tsx  server-sidebar-item.tsx  settings-sheet.tsx  sidebar.tsx  status-dot.tsx
apps/desktop/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  empty.tsx  form.tsx  label.tsx  radio-group.tsx  scroll-area.tsx  sheet.tsx  sonner.tsx  table.tsx  tabs.tsx  tooltip.tsx
apps/desktop/src/hooks/: use-active-connection.ts  use-live-admin.ts  use-servers.ts
apps/desktop/src/lib/: commands.ts  theme.tsx
apps/desktop/src/views/: empty-state.tsx  server-view.tsx
docs/: ARCHITECTURE.md  rcon-commands.md  sql-schema-discovery.md
docs/plans/: 2026-05-08-v0-design.md
scripts/: generate-types-barrel.mjs
