[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "packages/rcon-client",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/brandonrbridges/conan-exiles-server-manager"
authors = ["Brandon Bridges"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
ts-rs = { version = "10", features = ["serde-compat"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
