[package]
name = "cesm-desktop"
version = "1.0.0"
description = "Conan Exiles | Server Manager Enhanced — desktop app."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "cesm_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rcon-client = { path = "../../../packages/rcon-client" }
